# Practice-2025

./: .gitignore
ONNX Runtime/: CMakeLists.txt  main.cpp
generator/: draw.py  gen1.cpp  gen2.cpp  run.sh  test.py
python/: initProject.sh  requirements.txt
python/var1/: CNN.py
